--- a/src/app/view-tasks/view-tasks.component.css
+++ b/src/app/view-tasks/view-tasks.component.css
@@ -20,3 +20,12 @@ th {
 .main-body mat-form-field {
   width: 100px;
 }
+
+.icon {
+  border: 2px solid #3d4eae;
+  border-radius: 100px;
+}
+
+button {
+  margin-right: 8px;
+}
