--- a/src/app/view-tasks/view-tasks.component.html
+++ b/src/app/view-tasks/view-tasks.component.html
@@ -11,12 +11,12 @@
 
   <div class="table-container">
     <table mat-table [dataSource]="dataSource" matSort>
-      <ng-container matColumnDef="id">
+      <ng-container matColumnDef="taskID">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let row">{{ row.taskID }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="description">
+      <ng-container matColumnDef="taskDesc">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Task Description
         </th>
@@ -28,11 +28,16 @@
         <td mat-cell *matCellDef="let row">{{ row.date }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="action">
+      <ng-container matColumnDef="isDone">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>action</th>
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button (click)="updateTask(row.taskID)">
-            <mat-icon color="primary">check</mat-icon>
+            <mat-icon
+              class="icon"
+              [ngClass]="{ icon: row.isDone }"
+              color="primary"
+              >check</mat-icon
+            >
           </button>
         </td>
       </ng-container>
@@ -58,7 +63,7 @@
     </table>
 
     <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
+      [pageSizeOptions]="[5, 10, 15, 20]"
       aria-label="Select page of users"
     ></mat-paginator>
   </div>
