--- a/src/app/view-tasks/view-tasks.component.html
+++ b/src/app/view-tasks/view-tasks.component.html
@@ -1,3 +1,9 @@
+<mat-toolbar color="primary">
+  <span>My App</span>
+  <span class="example-spacer"></span>
+  <button mat-raised-button (click)="openAddForm()">new Task</button>
+</mat-toolbar>
+x
 <div class="main-body">
   <mat-form-field>
     <mat-label>Filter</mat-label>
@@ -15,7 +21,6 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let row">{{ row.taskID }}</td>
       </ng-container>
-
       <ng-container matColumnDef="taskDesc">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Task Description
