--- a/src/app/task-add-edit/task-add-edit.component.html
+++ b/src/app/task-add-edit/task-add-edit.component.html
@@ -27,8 +27,8 @@
   </div>
 
   <div mat-dialog-actions class="action">
-    <button class="btn-action" mat-raised-button>cancel</button
-    ><button class="btn-action" mat-raised-button color="primary" type="submit">
+    <button class="btn-action" mat-raised-button type="button">cancel</button>
+    <button class="btn-action" mat-raised-button color="primary" type="submit">
       Add
     </button>
   </div>
